2006-08-25  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add text/x-ocaml as a mime-type for OCaml
	files (Closes: #7836)

2006-08-25  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add application/x-debian-package as an alias
	for application/x-deb, as used by Apache, spotted by Gustavo
	J. A. M. Carneiro <gjc@inescporto.pt> (Closes: #6303)

2006-08-25  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add *.dtx and *.ins as possible patterns
	for TeX files, spotted by Thomas Braun <braun@physik.fu-berlin.de>
	(Re: #6235)

2006-08-25  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Fix the magic offset for M4A files, spotted
	by thrope <freedesktop@robince.ftml.net> (Closes: #7718)

2006-08-25  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: add "check" to the default target when compiling from
	CVS
	* freedesktop.org.xml.in: Change application/x-jar to the SUN-
	recommended application/x-java-archive, add an alias for the former,
	Add better conditional magic to tell zip files and .jars apart,
	Thanks to Joseph Kowalski <jek3@eng.sun.com> for his detailed report
	(Closes: #7852)

2006-08-25  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Wouter Bolsterlee
	<uws+freedesktop@xs4all.nl> with better magic for BZR generated
	patch files, and those starting with "---" (Closes: #7890)

2006-08-25  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Wouter Bolsterlee
	<uws+freedesktop@xs4all.nl> to add better magic for TeX files
	(Closes: #7891)

2006-08-24  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add audio/AMR and audio/AMR-WB as per
	RFC 3267, using the magic in section 8.1

2006-08-12  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: *.qtl files are
	QuickTime Media Links as per
	http://developer.apple.com/documentation/QuickTime/QT6WhatsNew/Chap1/chapter_1_section_53.html
