@@ -1,5 +1,11 @@
 2006-08-25  Bastien Nocera  <hadess@hadess.net>
 
+	* freedesktop.org.xml.in: Patch from Pino Toscano
+	<toscano.pino@tiscali.it> to add the application/sieve mime-type
+	for Sieve scripts (Closes: #6572)
+
+2006-08-25  Bastien Nocera  <hadess@hadess.net>
+
 	* freedesktop.org.xml.in: Add text/x-ocaml as a mime-type for OCaml
 	files (Closes: #7836)
 
